Added a gitignore file

--- a/form.html
+++ b/form.html
@@ -12,12 +12,12 @@
 
         <label class="field"><span>Name</span>
             <input id="name" name="" type="text" placeholder="Enter your name" required>
-            <p id="warning-msg"></p>
+            <p id="name-warning" class="warning-msg"></p>
         </label>
 
         <label class="field"><span>Address</span>
             <textarea id="address" name="" rows="3" placeholder="Enter your address here" required></textarea>
-            <p id="warning-msg"></p>
+            <p id="address-warning" class="warning-msg"></p>
         </label>
 
         <div class="field"><span>Hobbies</span>
@@ -27,7 +27,7 @@
                 <label><input name="hobby" type="checkbox">Singing</label>
                 <label><input name="hobby" type="checkbox">Dancing</label>
             </div>
-            <p id="warning-msg"></p>
+            <p id="hobby-warning" class="warning-msg"></p>
         </div>
 
         <div class="field"><span>Gender</span>            
@@ -36,12 +36,12 @@
                 <label><input name="gender" type="radio">Female</label>
                 <label><input name="gender" type="radio">Other</label>
             </div> 
-            <p id="warning-msg"></p>
+            <p id="gender-warning" class="warning-msg"></p>
         </div>
 
         <label class="field"><span>Age</span>         
             <input id="age" name="" type="number" required>
-            <p id="warning-msg"></p>
+            <p id="age-warning" class="warning-msg"></p>
         </label>
 
         <button id="submit-btn">Submit</button>
